-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.6.1
-
None
-
0523a7f38bca76ae56798a48573fc50343b2b402 (qt-creator/qt-creator/master) b9e26fcd376e0002e8f24abbd0baa94642025a1b (qt-creator/qt-creator/4.9)
As per the documentation of Debugging Helpers I have created a copy of personaltypes.py and added it under Tools->Options->Debugger->Locals&Expressions->Extra Debugging Helpers. Unfortunately it does not work and Qt Creator does not pick it up. If I overwrite the file in the default location it works fine.
I suspect it might be actually a Python thing. Does the custom location need to be in the PYTHONPATH or something like that? If so it would be worthwhile mentioning in the docs I believe.
| For Gerrit Dashboard: QTCREATORBUG-20481 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 254500,2 | Debugger: Load dumpers after possible user defined modules with CDB | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 254572,2 | Debugger: Load dumpers after possible user defined modules with CDB | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |