Debugger: Load dumpers after possible user defined modules with CDB

As is done for GDB and LLDB.

Fixes: QTCREATORBUG-20481
Change-Id: I13e73789e175fdca675c25378a856a5482d9e8fa
Reviewed-by: David Schulz <david.schulz@qt.io>